# wavyCPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bing.cpp  compile_shaders.bat  cubes.cpp  rebuild.bat  tmp.py  wavy.cpp  wavy_old.cpp
cmake/: mingw-w64-x86_64.cmake
include/: grid.hpp  helpers.h  main.hpp  marching_squares.hpp  renderer.hpp  wavy.hpp
src/: OpenSimplex.cpp  OpenSimplex.hpp  dot.cpp  grid.cpp  helpers.cpp  main.cpp  marching_squares.cpp  renderer.cpp  wavy.cpp  wavy.hpp
src/shaders/: fs_wavy.sc  fs_wavy_dot.sc  varying.def.sc  vs_wavy.sc  vs_wavy_dot.sc  vs_wavy_inst.sc
